--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -22,7 +22,8 @@ Compiling code</h3>
 You can programmatically compile the Java source files in a project using the build API.</P>
 <P CLASS="Code">
 IProgressMonitor myProgressMonitor;<br>
-myProject.build(IncrementalProjectBuilder.INCREMENTAL_BUILD, myProgressMonitor);</P>
+myProject.build(IncrementalProjectBuilder.INCREMENTAL_BUILD, myProgressMonitor);
+</P>
 <P >
 For a Java project, this will invoke the Java incremental project builder (along with any other incremental project builders that have been added to the project's build spec). </P>
 
@@ -38,14 +39,13 @@ The following snippet finds all Java problem markers in a compilation unit.</P>
 
 <P CLASS="Code">
 public IMarker[] findJavaProblemMarkers(ICompilationUnit cu)&nbsp;<br>
-&nbsp;&nbsp;&nbsp; throws CoreException {<BR>
-&nbsp;&nbsp;&nbsp; IResource javaSourceFile = cu.getUnderlyingResource();<BR>
-&nbsp;&nbsp;&nbsp; IMarker[] markers =&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-javaSourceFile.findMarkers(IJavaModelMarker.JAVA_MODEL_PROBLEM_MARKER,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; true,
-IResource.DEPTH_INFINITE);<BR>
-}</P>
+&nbsp;&nbsp;&nbsp;throws CoreException {<BR>
+&nbsp;&nbsp;&nbsp;IResource javaSourceFile = cu.getUnderlyingResource();<BR>
+&nbsp;&nbsp;&nbsp;IMarker[] markers =&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;javaSourceFile.findMarkers(IJavaModelMarker.JAVA_MODEL_PROBLEM_MARKER,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;true, IResource.DEPTH_INFINITE);<BR>
+}
+</P>
 <P >
 Java problem markers are maintained by the Java incremental project builder and will be removed automatically as problems are resolved and the Java source is recompiled.</P>
 <P >
