--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
@@ -25,20 +25,20 @@ for the Java project and running the class by name. The following code snippet s
 <P CLASS="Code">
 IVMInstall vmInstall = JavaRuntime.getVMInstall(myJavaProject);<br>
 if (vmInstall == null)<br>
-&nbsp;&nbsp;&nbsp; vmInstall = JavaRuntime.getDefaultVMInstall();<BR>
+&nbsp;&nbsp;&nbsp;vmInstall = JavaRuntime.getDefaultVMInstall();<BR>
 IVMRunner vmRunner = vmInstall.getVMRunner(ILaunchManager.RUN_MODE);<br>
 if (vmRunner != null) {<BR>
-&nbsp;&nbsp;&nbsp; String[] classPath = null;<BR>
-&nbsp;&nbsp;&nbsp; try {<BR>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; classPath = JavaRuntime.computeDefaultRuntimeClassPath(myJavaProject);<BR>
-&nbsp;&nbsp;&nbsp; } catch (CoreException e) { }<BR>
-&nbsp;&nbsp;&nbsp; if (classPath != null) {<BR>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; VMRunnerConfiguration vmConfig =&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; new VMRunnerConfiguration(&quot;MyClass&quot;, classPath);<BR>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; VMRunnerResult result =
-vmRunner.run(vmConfig);<br>
-&nbsp;&nbsp;&nbsp; }<BR>
-}</P>
+&nbsp;&nbsp;&nbsp;String[] classPath = null;<BR>
+&nbsp;&nbsp;&nbsp;try {<BR>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;classPath = JavaRuntime.computeDefaultRuntimeClassPath(myJavaProject);<BR>
+&nbsp;&nbsp;&nbsp;} catch (CoreException e) { }<BR>
+&nbsp;&nbsp;&nbsp;if (classPath != null) {<BR>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VMRunnerConfiguration vmConfig =&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;new VMRunnerConfiguration(&quot;MyClass&quot;, classPath);<BR>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VMRunnerResult result = vmRunner.run(vmConfig);<br>
+&nbsp;&nbsp;&nbsp;}<BR>
+}
+</P>
 
 
 <P><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
