--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
@@ -206,8 +206,7 @@ Other elements correspond to the items that make up a Java compilation unit (<b>
 </b> file). The figure below shows a Java compilation unit and a content outliner that displays the source elements in the compilation unit.</P>
 
 
-<H6 CLASS="FigureTitle">
-<img border="0" src="images/sourceelements.jpg" width="600" height="405"></H6>
+<img border="0" src="images/sourceelements.jpg" width="600" height="405">
 
 
 
@@ -226,21 +225,21 @@ resource. The following code snippet shows how to get Java elements from their
 corresponding resources.</P>
 <P CLASS="Code">
 private void createJavaElementsFrom(IProject myProject,&nbsp;<br>
-&nbsp;&nbsp;&nbsp; IFolder myFolder, IFile myFile) {<br>
+&nbsp;&nbsp;&nbsp;IFolder myFolder, IFile myFile) {<br>
 <BR>
-&nbsp;&nbsp;&nbsp; IJavaProject myJavaProject = JavaCore.create(myProject);<br>
-&nbsp;&nbsp;&nbsp; if (myJavaProject == null)<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; // the project is not configured for
-Java (has no Java nature)<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; return;<br>
+&nbsp;&nbsp;&nbsp;IJavaProject myJavaProject = JavaCore.create(myProject);<br>
+&nbsp;&nbsp;&nbsp;if (myJavaProject == null)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// the project is not configured for Java (has no Java nature)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return;<br>
 <BR>
-&nbsp;&nbsp;&nbsp; // get a package fragment or package fragment root<BR>
-&nbsp;&nbsp;&nbsp; IJavaElement myPackageFragment = JavaCore.create(myFolder);<br>
+&nbsp;&nbsp;&nbsp;// get a package fragment or package fragment root<BR>
+&nbsp;&nbsp;&nbsp;IJavaElement myPackageFragment = JavaCore.create(myFolder);<br>
 <BR>
-&nbsp;&nbsp;&nbsp; // get a .java (compilation unit), .class (class file), or<BR>
-&nbsp;&nbsp;&nbsp; // .jar (package fragment root)<BR>
-&nbsp;&nbsp;&nbsp; IJavaElement myJavaFile = JavaCore.create(myFile);<BR>
-}</P>
+&nbsp;&nbsp;&nbsp;// get a .java (compilation unit), .class (class file), or<BR>
+&nbsp;&nbsp;&nbsp;// .jar (package fragment root)<BR>
+&nbsp;&nbsp;&nbsp;IJavaElement myJavaFile = JavaCore.create(myFile);<BR>
+}
+</P>
 <P><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html"><b>JavaCore</b></a> is also used to maintain the Java class path, including locations for finding source code and libraries, and locations for generating output binary
 (<b>.class</b>) files.</P>
 
