--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -85,11 +85,8 @@ Note:	This example did not result in compile errors. However, moving a compilati
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
-
-</P>
+<P><img src = ../ngibmcpy.gif width="195" height="12"></P>
 
 
 
